[package]
name = "simpletgrs"
version = "0.2.0"
authors = ["Serjor <serjor@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }